...
                deleteClassButton.isHidden = true
                self.navigationItem.rightBarButtonItem = nil
            }
            registerButton.setTitle("Sign Up for Class!", for: .normal)

        } else {
            self.navigationItem.title = "Create a Class"
            self.navigationItem.rightBarButtonItem = nil
            intensityLabelView(intensity: 1)
            deleteClassButton.isHidden = true
        }


...
