...
                            <outlet property="dataSource" destination="VI2-KD-D5w" id="rB7-eo-fis"/>
                            <outlet property="delegate" destination="VI2-KD-D5w" id="gvl-hT-Q2p"/>
                        </connections>
                    </tableView>
                    <tabBarItem key="tabBarItem" title="Item" id="Q1y-eh-NTT"/>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Classes" id="jot-Is-IRr">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="8FI-6D-kQH">
                            <connections>
                                <segue destination="ube-iD-NeB" kind="show" identifier="ShowCreateClassSegue" id="Kh2-Z2-6Zp"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
